--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "json": "^9.0.3",
     "jsonwebtoken": "^5.7.0",
     "mongodb": "^2.1.4",
-    "request": "^2.69.0"
+    "request": "^2.69.0",
+    "rx": "^4.0.8"
   },
   "devDependencies": {
     "lodash": "^4.0.0",
