--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "async": "^1.5.2",
     "body-parser": "^1.14.2",
+    "bunyan": "^1.7.0",
     "express": "^4.13.3",
     "express-jwt": "^3.3.0",
     "json": "^9.0.3",
