--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "request": "^2.69.0",
     "restify": "^4.0.4",
     "restify-jwt": "^0.4.0",
-    "rx": "^4.0.8"
+    "rx": "^4.0.8",
+    "stream-json": "^0.4.0",
+    "tmp": "0.0.28",
+    "unzip": "^0.1.11"
   },
   "devDependencies": {
     "nodemon": "^1.8.1"
