--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend API for Rune application",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "import": "node tools/importer/index.js"
   },
   "repository": {
     "type": "git",
@@ -14,7 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^1.5.2",
-    "bunyan": "^1.7.0",
+    "bunyan": "^1.7.1",
     "jsonwebtoken": "^5.7.0",
     "lodash": "^4.0.0",
     "mongodb": "^2.1.4",
