--- a/tools/importer/config.json
+++ b/tools/importer/config.json
@@ -1,4 +1,5 @@
 {
   "db": "mongodb://localhost:27017/rune",
-  "source": "http://samnoedel.com/AllSets-x.json.zip"
+  "setSource": "http://mtgjson.com/json/AllSets-x.json.zip",
+  "cardSource": "http://mtgjson.com/json/AllCards-x.json.zip"
 }
