--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "jsonwebtoken": "^5.7.0",
     "lodash": "^4.0.0",
     "mongodb": "^2.1.4",
+    "reflect-metadata": "^0.1.3",
     "request": "^2.69.0",
     "restify": "^4.0.4",
     "restify-jwt": "^0.4.0",
     "rx": "^4.0.8",
-    "rxjs": "^5.0.0-beta.6",
+    "rxjs": "^5.0.0-beta.9",
     "scrypt": "^6.0.3",
     "stream-json": "^0.4.1",
     "tmp": "0.0.28",
